--- a/index.html
+++ b/index.html
@@ -1,9 +1,52 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <meta charset="utf-8">
+        <title>Landing Page!</title>
     </head>
     <body>
-        
+        <div class="header">
+            <div class="header-logo">Header Logo</div>
+            <ul class="links">
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
+        </div>
+        <div class="Introduction">
+            <div>This website is awesome</div>
+            <div>This website has some subtext that goes  here under the main title. It's a smaller font and the color is lower constrast</div>
+            <button>Sign up</button>
+            <img src="idk" alt="a beautiful image">
+        </div>
+        <div class="image-series">
+            <div class="img-rounded-corner">
+                <img src="idk" alt="a picture 1">
+                <div class="img-subtext">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="img-rounded-corner">
+                <img src="idk" alt="a picture 2">
+                <div class="img-subtext">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="img-rounded-corner">
+                <img src="idk" alt="a picture 3">
+                <div class="img-subtext">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="img-rounded-corner">
+                <img src="idk" alt="a picture 4">
+                <div class="img-subtext">this is some subtext under an illustration or image</div>
+            </div>
+        </div>
+        <div class="quote-area">
+            <div class="quote-quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+            <div class="quote-author">-Thor, God of Thunder</div>
+        </div>
+        <div class="sign-up-area">
+            <div>
+                <div>Call to action! It's time!</div>
+                <div>Sign up for our product by clicking that button right over there!</div>
+                <button class="sign-up-button">Sign up</button>
+            </div>
+        </div>
     </body>
 </html>
