--- a/index.html
+++ b/index.html
@@ -48,5 +48,8 @@
                 <button class="sign-up-button">Sign up</button>
             </div>
         </div>
+        <div class="bottom-bar">
+            <div>Copyright © The Odin Project 2022</div>
+        </div>
     </body>
 </html>
