Added basic styling to the header and introduction sections, and some changes in the html structure to make fit

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Landing Page!</title>
+        <link rel="stylesheet" href="./style.css">   
     </head>
     <body>
         <div class="header">
@@ -13,10 +14,12 @@
                 <li><a href="#">header link three</a></li>
             </ul>
         </div>
-        <div class="Introduction">
-            <div>This website is awesome</div>
-            <div>This website has some subtext that goes  here under the main title. It's a smaller font and the color is lower constrast</div>
-            <button>Sign up</button>
+        <div class="introduction">
+            <div>
+                <div class="introduction-big">This website is awesome</div>
+                <div class="introduction-subtext">This website has some subtext that goes  here under the main title. It's a smaller font and the color is lower constrast</div>
+                <button>Sign up</button>
+            </div>
             <img src="idk" alt="a beautiful image">
         </div>
         <div class="image-series">
