Add spacing and additional styling to the header and introduction

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="header">
-            <div class="header-logo">Header Logo</div>
+            <div>Header Logo</div>
             <ul class="links">
                 <li><a href="#">header link one</a></li>
                 <li><a href="#">header link two</a></li>
@@ -18,7 +18,7 @@
             <div>
                 <div class="introduction-big">This website is awesome</div>
                 <div class="introduction-subtext">This website has some subtext that goes  here under the main title. It's a smaller font and the color is lower constrast</div>
-                <button>Sign up</button>
+                <button id="introduction-button">Sign up</button>
             </div>
             <img src="idk" alt="a beautiful image">
         </div>
