--- a/index.html
+++ b/index.html
@@ -23,32 +23,49 @@
             <img src="idk" alt="a beautiful image">
         </div>
         <div class="image-series">
-            <div class="img-rounded-corner">
-                <img src="idk" alt="a picture 1">
-                <div class="img-subtext">this is some subtext under an illustration or image</div>
-            </div>
-            <div class="img-rounded-corner">
-                <img src="idk" alt="a picture 2">
-                <div class="img-subtext">this is some subtext under an illustration or image</div>
-            </div>
-            <div class="img-rounded-corner">
-                <img src="idk" alt="a picture 3">
-                <div class="img-subtext">this is some subtext under an illustration or image</div>
-            </div>
-            <div class="img-rounded-corner">
-                <img src="idk" alt="a picture 4">
-                <div class="img-subtext">this is some subtext under an illustration or image</div>
+            <div class="image-series-title">Some random information.</div>
+            <div class="img-row">
+                <div class="img-rounded-corner">
+                    <img src="white.png" alt="a picture 1">
+                    <div class="img-subtext-area">
+                        <div class="img-subtext">this is some subtext under an illustration or image</div>
+                    </div>
+                </div>
+                <div class="img-rounded-corner">
+                    <img src="white.png" alt="a picture 2">
+                    <div class="img-subtext-area">
+                        <div class="img-subtext">this is some subtext under an illustration or image</div>
+                    </div>
+                </div>
+                <div class="img-rounded-corner">
+                    <img src="white.png" alt="a picture 3">
+                    <div class="img-subtext-area">
+                        <div class="img-subtext">this is some subtext under an illustration or image</div>
+                    </div>
+                </div>
+                <div class="img-rounded-corner">
+                    <img src="white.png" alt="a picture 4">
+                    <div class="img-subtext-area">
+                        <div class="img-subtext">this is some subtext under an illustration or image</div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="quote-area">
-            <div class="quote-quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
-            <div class="quote-author">-Thor, God of Thunder</div>
+            <div class="quote-text">
+                <div class="quote-quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+                <div class="quote-author">-Thor, God of Thunder</div>
+            </div>
         </div>
         <div class="sign-up-area">
             <div>
-                <div>Call to action! It's time!</div>
-                <div>Sign up for our product by clicking that button right over there!</div>
-                <button class="sign-up-button">Sign up</button>
+                <div class="sign-up-area-text">
+                    <div>Call to action! It's time!</div>
+                    <div>Sign up for our product by clicking that button right over there!</div>
+                </div>
+                <div>
+                    <button class="sign-up-button">Sign up</button>
+                </div>
             </div>
         </div>
         <div class="bottom-bar">
